--- a/src/CWT.APP/CWT.Web/cwt-web-app/package.json
+++ b/src/CWT.APP/CWT.Web/cwt-web-app/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@material/web": "^1.0.1",
+    "@mui/icons-material": "^5.15.3",
     "@mui/lab": "^5.0.0-alpha.159",
     "@mui/material": "^5.14.15",
     "@testing-library/jest-dom": "^5.17.0",
